@@ -60,10 +60,11 @@ SIG0Signer(int algorithm, PrivateKey privateKey, Name name,
     this.algorithm = (byte) algorithm;
     this.privateKey = privateKey;
     this.name = name;
-    KEYRecord keyRecord = KEYConverter.buildRecord(name, DClass.IN, 0,
-						   KEYRecord.OWNER_USER,
-						   KEYRecord.PROTOCOL_ANY,
-						   publicKey);
+    Record rec = KEYConverter.buildRecord(name, Type.KEY, DClass.IN, 0,
+					  KEYRecord.OWNER_USER,
+					  KEYRecord.PROTOCOL_ANY,
+					  algorithm, publicKey);
+    KEYRecord keyRecord = (KEYRecord) rec;
     this.footprint = keyRecord.getFootprint();
 }
 
